--- a/edrx21.sty
+++ b/edrx21.sty
@@ -183,6 +183,7 @@
 \newsavebox{\myboxh}
 
 % «picture-cells» (to ".picture-cells")
+% (find-es "tex" "picture-cells")
 % (find-dn5 "newrect.lua" "makepicture")
 % Dednat6 uses "cells" in picture mode.
 %
@@ -308,6 +309,7 @@
 
 
 % «sa-and-ga»  (to ".sa-and-ga")
+% (find-es "tex" "sa-and-ga")
 % Example: \sa{01}{foo}
 %          \ga{01}
 \def\sa#1#2{\expandafter\def\csname myarg#1\endcsname{#2}}
