--- a/2021-1-C2-tudo.tex
+++ b/2021-1-C2-tudo.tex
@@ -19,25 +19,18 @@
 %               file:///tmp/2021-1-C2-tudo.pdf
 %           file:///tmp/pen/2021-1-C2-tudo.pdf
 % http://angg.twu.net/LATEX/2021-1-C2-tudo.pdf
+% (find-Deps1-links "TocLines1")
+% (find-Deps1-cps   "TocLines1")
+% (find-Deps1-anggs "TocLines1")
 % (find-LATEX "2019.mk")
-% (find-sh0 "cd ~/LUA/; cp -v Pict2e1.lua Pict2e1-1.lua Piecewise1.lua ~/LATEX/")
-% (find-sh0 "cd ~/LUA/; cp -v Pict2e1.lua Pict2e1-1.lua Pict3D1.lua ~/LATEX/")
-% (find-CN-aula-links "2021-1-C2-tudo" "2" "c2m211tudo" "c2tuo")
+% (find-CN-aula-links "2021-1-C2-tudo" "2" "c2m211tudo" "c2tu")
+% (find-MM-tudo-links "21" "1" "C2")
 
-% «.defs»	(to "defs")
-% «.title»	(to "title")
-% «.parts»	(to "parts")
-%
-% «.djvuize»	(to "djvuize")
-
-
-
-% <videos>
-% Video (not yet):
-% (find-ssr-links     "c2m211tudo" "2021-1-C2-tudo")
-% (code-eevvideo      "c2m211tudo" "2021-1-C2-tudo")
-% (code-eevlinksvideo "c2m211tudo" "2021-1-C2-tudo")
-% (find-c2m211tudovideo "0:00")
+% «.defs»		(to "defs")
+% «.defs-toclines»	(to "defs-toclines")
+% «.title»		(to "title")
+% «.parts»		(to "parts")
+% «.writetoc»		(to "writetoc")
 
 \documentclass[oneside,12pt]{article}
 \usepackage[colorlinks,citecolor=DarkRed,urlcolor=DarkRed]{hyperref} % (find-es "tex" "hyperref")
@@ -71,6 +64,14 @@
 \def\drafturl{http://angg.twu.net/LATEX/2021-1-C2.pdf}
 \def\drafturl{http://angg.twu.net/2021.1-C2.html}
 \def\draftfooter{\tiny \href{\drafturl}{\jobname{}} \ColorBrown{\shorttoday{} \hours}}
+
+% «defs-toclines»  (to ".defs-toclines")
+\catcode`\^^J=10
+\directlua{dofile "dednat6load.lua"} % (find-LATEX "dednat6load.lua")
+%L require "TocLines1"              -- (find-angg "LUA/TocLines1.lua")
+%L output(TocLines.texdefs)         -- (find-angg "LUA/TocLines1.lua" "texdefs")
+%L toclines = TocLines.new(status.filename)
+\pu
 
 
 
@@ -112,7 +113,6 @@ Eduardo Ochs - RCN/PURO/UFF
 % «parts»  (to ".parts")
 % Listing made with:
 % (find-angg "LUA/CodeEtexTla.lua" "parse-2020-2")
-\def\incl#1{\includepdf[pages=1-last]{#1.pdf}}
 
 % (c2i "title")
 % (c2i "title")
@@ -174,35 +174,12 @@ Eduardo Ochs - RCN/PURO/UFF
 % (c2p2 "title")
 \incl{2021-1-C2-P2}
 
+% «writetoc»  (to ".writetoc")
+\writetoc   % Writes to: (find-LATEX "2021-1-C2-tudo.mytoc")
+
 \GenericWarning{Success:}{Success!!!}  % Used by `M-x cv'
 
 \end{document}
-
-%  ____  _             _         
-% |  _ \(_)_   ___   _(_)_______ 
-% | | | | \ \ / / | | | |_  / _ \
-% | |_| | |\ V /| |_| | |/ /  __/
-% |____// | \_/  \__,_|_/___\___|
-%     |__/                       
-%
-% «djvuize»  (to ".djvuize")
-% (find-LATEXgrep "grep --color -nH --null -e djvuize 2020-1*.tex")
-
-
-
-%  __  __       _        
-% |  \/  | __ _| | _____ 
-% | |\/| |/ _` | |/ / _ \
-% | |  | | (_| |   <  __/
-% |_|  |_|\__,_|_|\_\___|
-%                        
-% <make>
-
- (eepitch-shell)
- (eepitch-kill)
- (eepitch-shell)
-lualatex                  2021-1-C2-tudo.tex
-# (find-pdf-page "~/LATEX/2021-1-C2-tudo.pdf")
 
 % Local Variables:
 % coding: utf-8-unix
