--- a/README.org
+++ b/README.org
@@ -19,6 +19,7 @@
 #   (find-es "magit" "edrxrepl")
 # 
 # (find-C2C3git-links "2021-1")
+# (find-MMMMgit-links "2021-1" "C2-C3")
 # (find-orgnode "Table of Contents")
 #+OPTIONS: toc:nil num:nil
 # 
